[package]
name = "isl-rs"
version = "0.1.3"
authors = ["Kaushik Kulkarni <kaushikcfd@gmail.com>"]
edition = "2021"
description = "Rust bindings for Integer Set Library"
documentation = "https://docs.rs/isl-rs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/kaushikcfd/isl-rs"

[lib]
name = "isl_rs"
path = "src/lib.rs"

[dependencies]
libc = "0.2.133"

[build-dependencies]
reqwest = { version = "0.12.22", features = ["blocking"] }
tar = "0.4.44"
xz = "0.1.0"
